--- a/doc/default.css
+++ b/doc/default.css
@@ -49,7 +49,7 @@ table {
 	border: 2px solid #333333;
 	border-collapse: collapse;
 	cell-spacing: 0;
-	margin: 0.5em 1em 0em 3em;
+	margin: 0.5em 1em 0em 3.6em;
 }
 td, th {
 	border: 1px solid #666666;
@@ -72,7 +72,7 @@ table.color_table td.color_sample, th.color_sample {
 }
 
 pre, div.code {
-	border : 1px solid #333333;
+	border : 2px solid #333333;
 	margin: 0.5em 2em 0.5em 3.6em;
 }
 
@@ -88,7 +88,7 @@ div.code_body {
 }
 
 img {
-	margin: 0.5em 1em 0.5em 0em;
+	margin: 0.5em 1em 0.5em 0.6em;
 	vertical-align: middle;
 	border: 1px solid #333333;
 }
@@ -100,15 +100,20 @@ dl, ul, ol {
 dl {
 	padding: 0;
 }
+ul, ol {
+	margin-top: 0.7em;
+}
 ul {
-	padding: 0 0 0 24px;
+	padding: 0 0 0 22px;
 	list-style-image: url("images/list-head.png");
 }
 ol {
 	padding: 0 0 0 1.4em;
 }
 dt {
+	padding: 0 0 0 22px;
 	margin: 0.5em 0em 0em 0em;
+	background: scroll transparent url("images/list-head.png") left center no-repeat;
 }
 dd {
 	margin: 0.2em 0em 0.2em 1em;
